# orchestrate

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  NON_IDEAL_AGENTS.md  README.md  build.rs  flake.nix  readme.md  skills.md
examples/: store_probe.rs
schema/: nexus.schema  orchestrate-storage-v0-1.schema  orchestrate-types-v0-1.schema  orchestrate-v0-1-1.schema  orchestrate-v0-1.schema  orchestrate.concept.schema  sema.schema
src/: activity.rs  activity_read.rs  age_projection.rs  agent_reachability.rs  claim.rs  configuration.rs  daemon.rs  divergence.rs  error.rs  execution.rs  handover.rs  harness_liveness.rs  lane.rs  lane_reclamation.rs  layout.rs  legacy_lock_import.rs  lib.rs  location.rs  lock_projection.rs  lowering.rs  main.rs  messenger_registration.rs  orchestrator_agent_identifier.rs  orchestrator_presentation.rs  repository.rs  role.rs  router_registration.rs  service.rs  signal_transport.rs  socket_retirement.rs  store_preserve.rs  table_reclamation.rs  tables.rs  upgrade_frame.rs  workflow.rs  workflow_engine.rs  worktree.rs  worktree_projection.rs
src/schema/: daemon.rs  mod.rs  nexus.rs  sema.rs
tests/: agent_reachability.rs  architecture.rs  daemon_cli.rs  handover.rs  ledger.rs  orchestrator_message_send.rs  router_registration.rs  schema_contract.rs  smoke.rs  store_migration_fixtures.rs  upgrade_end_to_end.rs  upgrade_end_to_end_daemon_processes.rs  upgrade_wire_listener.rs  workflow_engine_thin_slice.rs  worktree.rs
