[package]
name         = "orchestrate"
version      = "0.4.1"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/orchestrate"
description  = "Typed orchestration state for Persona agents."
publish      = false
build        = "build.rs"

[lib]
name = "orchestrate"
path = "src/lib.rs"

[[bin]]
name = "orchestrate-daemon"
path = "src/main.rs"

[[bin]]
name = "orchestrate"
path = "src/bin/orchestrate.rs"
required-features = ["nota-text"]

[[bin]]
name = "meta-orchestrate"
path = "src/bin/meta_orchestrate.rs"
required-features = ["nota-text"]

[[bin]]
name = "orchestrate-write-configuration"
path = "src/bin/orchestrate_write_configuration.rs"

# The daemon-and-CLI end-to-end test drives the schema-frame `orchestrate` CLI
# binary, which decodes/encodes NOTA — so it needs `nota-text` active to build
# that binary. `cargo test --features nota-text` runs the full suite.
[[test]]
name = "daemon_cli"
path = "tests/daemon_cli.rs"
required-features = ["nota-text"]

[features]
default   = []
nota-text = [
    "signal-orchestrate/nota-text",
    "meta-signal-orchestrate/nota-text",
]

[dependencies]
sema-engine                 = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "main" }
signal-orchestrate = { git = "https://github.com/LiGoldragon/signal-orchestrate.git", branch = "drop-next" }
meta-signal-orchestrate = { git = "https://github.com/LiGoldragon/meta-signal-orchestrate.git", branch = "drop-next" }
signal-criome = { git = "https://github.com/LiGoldragon/signal-criome.git", branch = "drop-next" }
signal-frame                = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "drop-next" }
signal-sema                 = { git = "https://github.com/LiGoldragon/signal-sema.git", branch = "drop-next" }
signal-version-handover     = { git = "https://github.com/LiGoldragon/signal-version-handover.git", branch = "drop-next" }
triad-runtime               = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "drop-next" }
nota                   = { git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
version-projection          = { git = "https://github.com/LiGoldragon/version-projection.git", branch = "drop-next" }
rkyv                        = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror                   = "2"
tokio                       = { version = "1", features = ["rt-multi-thread", "io-util"] }

[build-dependencies]
schema-rust = { git = "https://github.com/LiGoldragon/schema-rust.git", branch = "drop-next" }

[dev-dependencies]
criome = { git = "https://github.com/LiGoldragon/criome.git", branch = "drop-next" }
schema = { git = "https://github.com/LiGoldragon/schema.git", branch = "drop-next" }
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }
dead_code = "warn"

[patch.crates-io]
kameo = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main" }
